--- a/todo_list/src/App.css
+++ b/todo_list/src/App.css
@@ -3,13 +3,18 @@ h1 {
     font-family:Georgia, 'Times New Roman', Times, serif;
     font-style: italic;
   }
-
+  .App {
+    text-align: center;
+    font-family:Georgia, 'Times New Roman', Times, serif;
+    font-style: italic;
+  }
   body {
     background: grey
   }
   #todo-list {
     width: 500px;
     margin: 60px auto;
+    text-align: center;
   }
   form, .todo {
     border: 1px solid rgb(15, 26, 61);
@@ -29,6 +34,7 @@ h1 {
   .todo {
     display: flex;
     flex-direction: column;
+    text-align: center;
   }
   
   button {
@@ -72,4 +78,5 @@ h1 {
   .todo-actions {
     display: flex;
     justify-content: space-between;
+    text-align: center;
   }
